Update intersection lane directions and vehicle movement logic